# egress-guard

./: README.md  pyproject.toml
src/home_ops_egress_guard/: __init__.py  guard.py
tests/: test_guard.py
